fixed the sidebar text alignment and timer lap alignment

--- a/docs/css/timer.css
+++ b/docs/css/timer.css
@@ -25,4 +25,13 @@
     display: inline-block;
     text-align: center;
   }
-;
+
+.results {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;    
+}
+
+.results li {
+    text-align: center;
+}
